grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: grafana
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: grafana
  type: LoadBalancer
  loadBalancerIP: 192.168.1.246
