grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: grafana
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
